# ZeroForge

./: .gitignore  API.md  LICENSE  README.md  batch_eval.py  benchmark_selfplay.py  distill_checkpoint.py  eval_vs_pikafish.py  evaluate_checkpoints.py  generate_eval_fens.py  main.py  openings_generated.txt  play.py  pyproject.toml  requirements.txt  test_gpu.py  train.py  uci.bat  uci_engine.py
algorithms/: __init__.py
algorithms/alphazero/: __init__.py  algorithm.py  network.py
algorithms/gumbel/: __init__.py  algorithm.py  search.py
algorithms/muzero/: __init__.py  algorithm.py  network.py
cli/: __init__.py  play.py
configs/: debug.yaml  default.yaml
core/: __init__.py  algorithm.py  checkpoint.py  config.py  game.py  logging.py  replay_buffer.py  selfplay.py  trainer.py  training_config.py
core/mcts/: __init__.py  batcher.py  gumbel.py  node.py  search.py  tree.py
evaluation/: __init__.py  arena.py  elo.py
games/: __init__.py
games/chinese_chess/: __init__.py  config.py  game.py
games/chinese_chess/cchess/: __init__.py
games/gomoku/: __init__.py  config.py  game.py
games/gymnasium/: __init__.py  config.py  presets.py  utils.py  wrapper.py
games/tictactoe/: __init__.py  config.py  game.py
gui/: __init__.py  api.py  web_gui.py  xiangqi_gui.py
gui/static/: index.html
mcts/: __init__.py  search.py
networks/: __init__.py  alphazero.py  convnext.py  heads.py  muzero.py
server/: __init__.py  api.py  manager.py
training/: __init__.py  checkpoint.py  logging.py  parallel_selfplay.py  replay_buffer.py  trainer.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ConfirmDialog.tsx  GameBoard.tsx  LossChart.tsx  StatCard.tsx  Toast.tsx  TrainingControls.tsx
web/src/hooks/: useWebSocket.ts
web/src/pages/: ArenaPage.tsx  ConfigPage.tsx  Dashboard.tsx  DebugPage.tsx  GamesPage.tsx
web/src/store/: index.ts
web/src/utils/: api.ts
xiangqi/: __init__.py  actions.py  env.py  fen.py  mirror.py  pikafish.py  rules.py  violation_rules.py
