[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeroforge"
version = "0.1.0"
description = "面向 MuZero、AlphaZero 及其演进算法的现代化训练框架"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ZeroForge Team", email = "zeroforge@example.com"},
]
keywords = ["alphazero", "muzero", "reinforcement-learning", "game-ai", "mcts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.14"

dependencies = [
    "numpy>=2.0.0",
    "torch>=2.9.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
logging = [
    "loguru>=0.7.0",
]
all = [
    "zeroforge[web,dev,logging]",
]

[project.urls]
Homepage = "https://github.com/zeroforge/zeroforge"
Documentation = "https://zeroforge.readthedocs.io"
Repository = "https://github.com/zeroforge/zeroforge"

[tool.hatch.build.targets.wheel]
packages = ["core", "algorithms", "games", "server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
