[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeroforge"
version = "0.1.0"
description = "面向 MuZero、AlphaZero 及其演进算法的现代化训练框架"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ZeroForge Team", email = "zeroforge@example.com"},
]
keywords = ["alphazero", "muzero", "reinforcement-learning", "game-ai", "mcts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.14"

dependencies = [
    # 核心依赖
    "numpy>=2.4.0",
    "torch>=2.9.1",
    "pydantic>=2.0.0",
    # Web 后端
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    # 日志
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
gymnasium = [
    "gymnasium>=1.0.0",
]
atari = [
    "gymnasium[atari]>=1.0.0",
    "ale-py>=0.10.0",
]
mujoco = [
    "gymnasium[mujoco]>=1.0.0",
]
all = [
    "zeroforge[dev,gymnasium,atari,mujoco]",
]

[project.urls]
Homepage = "https://github.com/zeroforge/zeroforge"
Documentation = "https://zeroforge.readthedocs.io"
Repository = "https://github.com/zeroforge/zeroforge"

[tool.hatch.build.targets.wheel]
packages = ["core", "algorithms", "games", "server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
